<resources>

    <!-- App name -->
    <string name="app_name">What The Price</string>
    <string name="image"> Image </string>
    <string name="default_directory"> Default </string>
    <string name="default_directory_description"> This is the default folder. </string>

    <!-- Menu -->
    <string name="folder_spinner"> Folder Spinner </string>
    <string name="clear_order"> Clear current order </string>
    <string name="manage_folders"> Manage folders </string>
    <string name="add_folder"> Add folder </string>
    <string name="share_folder"> Share folder </string>
    <string name="share_folder_error"> Error! WhatsApp is not installed! </string>
    <string name="share_folder_message"> Hello! Click here to import the shared folder: </string>
    <string name="delete_folder"> Delete current folder </string>
    <string name="delete_folder_warning"> Delete </string>
    <string name="delete_folder_error"> Cannot delete last folder! </string>
    <string name="delete_folder_error2"> Error! Could not delete folder! </string>

    <!-- Tab names -->
    <string name="overview"> Overview </string>
    <string name="drinks"> Drinks </string>
    <string name="food"> Food </string>

    <!-- New folder activity -->
    <string name="new_folder_title"> Add a new folder </string>
    <string name="folder_name_hint"> Name of the folder </string>
    <string name="folder_name_warning"> Missing name! </string>
    <string name="folder_name_warning2"> Name should not contain \'.\'! </string>
    <string name="folder_description_hint"> Description of the folder </string>
    <string name="folder_add_success"> Folder was added successfully! </string>
    <string name="folder_add_error"> Error! Folder was not added! Name is probably taken! </string>
    <string name="folder_import_success"> Folder was imported successfully! </string>
    <string name="folder_import_warning"> Folder was imported with problems! </string>

    <!-- New item activity -->
    <string name="new_item_title"> Add a new item </string>
    <string name="item_name_hint"> Name of the item </string>
    <string name="item_name_warning"> Missing name! </string>
    <string name="item_price_hint"> Price of the item </string>
    <string name="item_price_warning"> Price is invalid! </string>
    <string name="item_ingredients_hint"> Ingredients of the item </string>
    <string name="item_add_success"> Item was added successfully! </string>
    <string name="item_add_error"> Error! Item was not added! </string>
    <string-array name="types">
        <item> Add to drinks </item>
        <item> Add to food </item>
    </string-array>

    <!-- Detailed item activity -->
    <string name="detailed_title"> Detailed item view </string>
    <string name="detailed_delete_success"> Item was deleted successfully! </string>
    <string name="detailed_delete_error"> Error! Could not delete item! </string>
    <string name="detailed_price"> Price per unit </string>
    <string name="detailed_price_unit"> € </string>
    <string name="detailed_quantity"> Quantity </string>
    <string name="detailed_ingredients"> Ingredients </string>
    <string name="detailed_no_ingredients"> No ingredients given. </string>

    <!-- Overview fragment -->
    <string name="overview_folder_description"> Description </string>
    <string name="overview_no_description">No description given.</string>
    <string name="overview_folder_order"> Order </string>
    <string name="overview_total"> Total: </string>
    <string name="overview_euro"> € </string>

    <!-- Item fragment -->
    <string name="items_search"> Search </string>
    <string name="items_no_items"> No items found! </string>

    <!-- Item adapter -->
    <string name="item_adapter_quantity"> Quantity: </string>
    <string name="item_adapter_price"> Price: </string>
    <string name="item_adapter_price_unit"> € </string>

</resources>
