<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.database.NewItemActivity">

    <ImageView
        android:layout_margin="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/clear"
        android:onClick="cancel"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <Spinner
        android:id="@+id/spinner_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="32dp"/>

    <ImageView
        android:layout_margin="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="addItem"
        android:src="@drawable/check"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <EditText
        android:id="@+id/text_name"
        android:layout_margin="16dp"
        android:hint="@string/item_name_hint"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/spinner_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/text_price"
        android:inputType="numberDecimal"
        android:layout_margin="16dp"
        android:hint="@string/item_price_hint"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/text_ingredients"
        android:inputType="none"
        android:layout_margin="16dp"
        android:hint="@string/item_ingredients_hint"
        app:layout_constraintTop_toBottomOf="@id/text_price"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>