<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.shared.ItemDetailActivity">

    <View
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_shadow"/>

    <ImageView
        android:layout_margin="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/clear"
        android:onClick="cancel"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/delete_folder"
        app:layout_constraintBottom_toBottomOf="@id/delete_folder" />

    <ImageView
        android:id="@+id/delete_folder"
        android:layout_margin="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="deleteItem"
        android:src="@drawable/delete"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <TextView
        android:id="@+id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_price"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_folder" />

    <View
        app:layout_constraintTop_toBottomOf="@id/price_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_title" />

    <TextView
        android:id="@+id/price_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/detailed_price_unit"
        app:layout_constraintLeft_toRightOf="@id/price"
        app:layout_constraintTop_toBottomOf="@id/price_title" />

    <TextView
        android:id="@+id/quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_quantity"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price" />

    <View
        app:layout_constraintTop_toBottomOf="@id/quantity_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity_title" />

    <TextView
        android:id="@+id/ingredients_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_ingredients"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity" />

    <View
        app:layout_constraintTop_toBottomOf="@id/ingredients_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/detailed_no_ingredients"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredients_title" />

</androidx.constraintlayout.widget.ConstraintLayout>