<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.ItemsFragment">

    <EditText
        android:id="@+id/search"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:inputType="none"
        android:hint="@string/items_search"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_items"
        app:layout_constraintTop_toBottomOf="@id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/no_items_lens"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:contentDescription="@string/image"
            android:src="@drawable/search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="128dp"
            android:layout_height="128dp" />

        <TextView
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/no_items_lens"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:text="@string/items_no_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/list"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/add"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>