<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/decrease"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/image"
        android:src="@drawable/remove_circle"
        android:layout_marginStart="16dp"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <TextView
        android:id="@+id/name"
        android:textColor="#000000"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/decrease"
        app:layout_constraintRight_toLeftOf="@id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/price_title"
        android:text="@string/item_adapter_price"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/price"
        android:textColor="#000000"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/price_unit"
        android:text="@string/item_adapter_price_unit"
        android:textColor="#000000"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/quantity_title"
        android:text="@string/item_adapter_quantity"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/price_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/quantity"
        android:textColor="#000000"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/increase"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/image"
        android:src="@drawable/info"
        android:layout_marginEnd="16dp"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <ImageView
        android:id="@+id/increase"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/image"
        android:src="@drawable/add_circle"
        android:layout_marginEnd="16dp"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>